<resources>
    <string name="app_name">To Do</string>

    <string name="tasks">ZADANIA</string>
    <string name="add_task">dodaj zadanie</string>
    <string name="remove_button">X</string>
    <string name="attachment_info">ikona załącznika</string>
    <string name="remove_task_message">Czy chcesz usunąć zadanie?</string>
    <string name="remove">usuń</string>
    <string name="add">dodaj</string>
    <string name="cancel">anuluj</string>
    <string name="title">tytuł</string>
    <string name="description">opis</string>
    <string name="when_created">data utworzenia</string>
    <string name="deadline">termin wykonania</string>
    <string name="notification">powiadomienie</string>
    <string name="status">status</string>
    <string name="attachments">załączniki</string>
    <string name="choose_date">wybierz datę</string>
    <string name="choose_time">wybierz godzinę</string>
    <string name="date">data</string>
    <string name="time">godzina</string>
    <string name="category">kategoria</string>
    <string name="attachments_chosen">wybrane załączniki</string>
    <string name="choose_attachments">wybierz załączniki</string>
    <string name="not_valid_date">wybierz datę w przyszłości</string>
    <string name="not_valid_time">wybierz czas w przyszłości</string>
    <string name="cannot_copy_file">nie można skopiować pliku</string>
    <string name="finished">ukończone</string>
    <string name="unfinished">nieukończone</string>
    <string name="on">włączone</string>
    <string name="off">wyłączone</string>
    <string name="search">wyszukaj</string>
    <string name="sort_most_urgent">od najpilniejszych</string>
    <string name="more">więcej</string>
    <string name="hide_finished">ukryj zakończone</string>
    <string name="settings">ustawienia</string>
    <string name="categories">kategorie</string>
    <string name="notification_time">czas powiadomień (minuty)</string>
    <string name="save">zapisz</string>
    <string name="completed">ukończone</string>
    <string name="task_updated">zadanie zostało zaktualizowane</string>
    <string name="no_such_task">nie odnaleziono zadania</string>
    <string name="add_attachments">dodaj załącznik</string>

    <string name="channel_name">zadania</string>
    <string name="channel_description">powiadomienia o zadaniach</string>

    <string name="work">praca</string>
    <string name="hobby">hobby</string>
    <string name="family">rodzina</string>

    <string-array name="categories">
        <item>@string/work</item>
        <item>@string/hobby</item>
        <item>@string/family</item>
    </string-array>
</resources>