<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/more"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/hide_finished"
                android:checkable="true"
                android:icon="@drawable/baseline_visibility_24"
                android:title="@string/hide_finished"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/sort_most_urgent"
                android:checkable="true"
                android:icon="@drawable/baseline_sort_24"
                android:title="@string/sort_most_urgent"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/baseline_settings_24"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>