<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_margin="7dp"
                android:autoSizeTextType="uniform"
                android:padding="7dp"
                android:text="@string/categories"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/work_checkbox"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="7dp"
                android:autoSizeTextType="uniform"
                android:padding="7dp"
                android:text="@string/work" />

            <CheckBox
                android:id="@+id/hobby_checkbox"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="7dp"
                android:autoSizeTextType="uniform"
                android:padding="7dp"
                android:text="@string/hobby" />

            <CheckBox
                android:id="@+id/family_checkbox"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_margin="7dp"
                android:autoSizeTextType="uniform"
                android:padding="7dp"
                android:text="@string/family" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_margin="7dp"
                android:autoSizeTextType="uniform"
                android:padding="7dp"
                android:text="@string/notification_time"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/notification_time"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_margin="7dp"
                android:autoSizeTextType="uniform"
                android:digits="0123456789"
                android:inputType="number"
                android:padding="7dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>