<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:backgroundTint="@color/black"
                    android:elevation="4dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:labelFor="@id/title"
            android:padding="7dp"
            android:text="@string/title"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:autofillHints="name"
            android:inputType="text"
            android:padding="7dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:labelFor="@id/description"
            android:padding="7dp"
            android:text="@string/description"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:autofillHints="name"
            android:inputType="text"
            android:padding="7dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/when_created"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/when_created"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/deadline"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:height="47dp"
                android:autoSizeTextType="uniform"
                android:hint="@string/date"
                android:padding="17dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/choose_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/choose_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:text="@string/choose_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:height="47dp"
                android:autoSizeTextType="uniform"
                android:hint="@string/time"
                android:padding="17dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/choose_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/choose_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:text="@string/choose_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/completed"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/notification"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/category"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:text="@string/attachments"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/choose_attachments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:text="@string/add_attachments" />

        <TextView
            android:id="@+id/attachment_count"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="7dp"
            android:autoSizeTextType="uniform"
            android:padding="7dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/attachments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical"
            android:padding="7dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>